--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
 
         <div class="row">
           <div class="col-sm-12">
-            <h1><span id="typed" class="work-header"></span></h1>
+            <h1 class="work-h1"><span id="typed" class="work-header"></span></h1>
           </div>
         </div>
 
         <div class="row">
           <div class="col-sm-12">
-            <h2><span id="typed" class='design-work'></span></h2>
+            <h2 class="design-h2"><span id="typed" class='design-work'></span></h2>
           </div>
           <div class="col-sm-8 col-xs-12">
             <p class="design-desc">I like to keep it simple. My goals are to focus on typography, content and the message that you want to send. <br>
@@ -147,7 +147,7 @@
 
         <div class="row">
           <div class="col-sm-12">
-            <h2><span id="typed" class="develop-work"></span></h2>
+            <h2 class="develop-h2"><span id="typed" class="develop-work"></span></h2>
           </div>
           <div class="col-sm-8 col-xs-12">
             <p class="develop-desc">I'm a developer, so I know how to create your website to run across devices using the latest technologies available.<br>
