--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
         <div class="row">
           <div class="col-md-8 col-sm-12 desc-about">
-            <p class="desc">I'm a young web developer(22) who enjoys creating beautiful, modern, responsive websites and who is very passionate about web design and programming. I'm also student of Computer and Information Sciences in Belgrade, Singidunum University.</p>
+            <p class="desc"><span id="typed" class="type-desc"></span></p>
+            <!-- <p class="desc">I'm a young web developer(22) who enjoys creating beautiful, modern, responsive websites and who is very passionate about web design and programming. I'm also student of Computer and Information Sciences in Belgrade, Singidunum University.</p> -->
           </div>
         </div>
 
@@ -74,8 +75,8 @@
             <p class="head">skills:</p>
           </div>
           <div class="col-md-6 col-sm-12 col-xs-12 skills">
-            <!-- <p>html5</p> -->
-            <p><span id="typed" class="html"></span></p>
+
+            <!-- <p><span id="typed" class="html"></span></p>
             <p><span id="typed" class="css"></span></p>
             <p><span id="typed" class="js"></span></p>
             <p><span id="typed" class="jquery"></span></p>
@@ -84,16 +85,17 @@
             <p><span id="typed" class="php"></span></p>
             <p><span id="typed" class="java"></span></p>
             <p><span id="typed" class="mysql"></span></p>
-            <p><span id="typed" class="android"></span></p>
-            <!-- <p>css3</p>
-            <p>javascript</p> -->
-            <!-- <p>jquery</p>
+            <p><span id="typed" class="android"></span></p> -->
+            <p>html5</p>
+            <p>css3</p>
+            <p>javascript</p>
+            <p>jquery</p>
             <p>responsive</p>
-            <p>web design</p> -->
-            <!-- <p>php</p>
+            <p>web design</p>
+            <p>php</p>
             <p>java</p>
             <p>mysql</p>
-            <p>android</p> -->
+            <p>android</p>
           </div>
         </div>
 
