--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <section id="home">
       <div class="container">
         <div class="row">
-          <div class="col-sm-6">
-            <a href="javascript:void(0)"><img src="img/content/logo2.png" alt=""></a>
+          <div class="col-sm-6 col-xs-12">
+            <a href="javascript:void(0)"><img  class="logo" src="img/content/logo2.png" alt=""></a>
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-6 col-xs-12">
             <div class="nav text-right">
               <a data-intex="1" href="#1" class="home active">home</a>
               <a data-intex="2" href="#2" class="about">about</a>
@@ -51,7 +51,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <a href="javascript:void(0)"><img src="img/content/logo2.png" alt=""></a>
+            <a href="javascript:void(0)"><img class="logo" src="img/content/logo2.png" alt=""></a>
           </div>
           <div class="col-sm-6">
             <div class="nav text-right">
@@ -118,7 +118,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <a href="javascript:void(0)"><img src="img/content/logo2.png" alt=""></a>
+            <a href="javascript:void(0)"><img class="logo" src="img/content/logo2.png" alt=""></a>
           </div>
           <div class="col-sm-6">
             <div class="nav text-right">
@@ -165,7 +165,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-6">
-            <a href="javascript:void(0)"><img src="img/content/logo2.png" alt=""></a>
+            <a href="javascript:void(0)"><img class="logo" src="img/content/logo2.png" alt=""></a>
           </div>
           <div class="col-sm-6">
             <div class="nav text-right">
