--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
         <div class="row">
           <div class="col-sm-12 social">
 
-            <a href="javascript:void(0)"><i class="ion-social-facebook"></i></a>
-            <a href="javascript:void(0)"><i class="ion-social-pinterest"></i></a>
-            <a href="javascript:void(0)"><i class="ion-social-linkedin"></i></a>
-            <a href="javascript:void(0)"><i class="ion-social-dribbble"></i></a>
+            <a href="https://www.facebook.com/lazicsava"><i class="ion-social-facebook"></i></a>
+            <a href="https://www.pinterest.com/savalazic/"><i class="ion-social-pinterest"></i></a>
+            <a href="https://rs.linkedin.com/in/savalazic"><i class="ion-social-linkedin"></i></a>
+            <a href="https://dribbble.com/savalazic"><i class="ion-social-dribbble"></i></a>
 
 
           </div>
