--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
 <html lang="en">
 <head>
     <meta name="viewport" charset="utf-8" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Frontend Developer UX & UI Lover"/>
+    <meta name="keywords" content="frontend, ux, ui, web design, sava, lazic, developer"/>
+
+    <meta property="og:title" content="Sava Lazic Frontend Developer"/>
+    <meta property="og:image" content="http://ga2s.net/img/ga2s-logo.png"/>
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="300" />
+    <meta property="og:site_name" content="Sava Lazic Frontend Developer"/>
+    <meta property="og:description" content="Frontend Developer UX & UI Lover"/>
+
+
     <title>Sava Lazic | Frontend Developer</title>
     <link href="assets/css/app.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
