--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="frontend, ux, ui, web design, sava, lazic, developer"/>
 
     <meta property="og:title" content="Sava Lazic Frontend Developer"/>
-    <meta property="og:image" content="http://ga2s.net/img/ga2s-logo.png"/>
+    <meta property="og:image" content="http://savalazic.github.io/assets/img/half-screen.png"/>
     <meta property="og:image:width" content="300" />
     <meta property="og:image:height" content="300" />
     <meta property="og:site_name" content="Sava Lazic Frontend Developer"/>
