--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <meta property="og:site_name" content="Sava Lazic Frontend Developer"/>
     <meta property="og:description" content="Frontend Developer UX & UI Lover"/>
 
+    <meta name="google-site-verification" content="FbjTcNVrQ1cm5TCuAQ87Qrpp44SoQILbXJ8lJMTiO1U" />
+
 
     <title>Sava Lazic | Frontend Developer</title>
     <link href="assets/css/app.css" rel="stylesheet">
